fix spacings of home scroll animations

--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -7,7 +7,7 @@
 }
 
 .home-scroll-screen-content {
-  margin-left: 40%;
+  margin-left: 45%;
   min-height: 60vh;
   margin-right: 3rem;
 
